implement error information
