# api/src/generated/models/app_error.go
@@ -1,0 +1,94 @@
+// Code generated by go-swagger; DO NOT EDIT.
+
+package models
+
+// This file was generated by the swagger tool.
+// Editing this file might prove futile when you re-run the swagger generate command
+
+import (
+	strfmt "github.com/go-openapi/strfmt"
+
+	"github.com/go-openapi/errors"
+	"github.com/go-openapi/swag"
+	"github.com/go-openapi/validate"
+)
+
+// AppError Application Error
+// swagger:model AppError
+type AppError struct {
+
+	// caption
+	// Required: true
+	Caption *string `json:"caption"`
+
+	// condition
+	Condition string `json:"condition,omitempty"`
+
+	// detail
+	Detail string `json:"detail,omitempty"`
+
+	// when it happened
+	// Format: date-time
+	OccursAt strfmt.DateTime `json:"occursAt,omitempty"`
+
+	// owner
+	Owner string `json:"owner,omitempty"`
+}
+
+// Validate validates this app error
+func (m *AppError) Validate(formats strfmt.Registry) error {
+	var res []error
+
+	if err := m.validateCaption(formats); err != nil {
+		res = append(res, err)
+	}
+
+	if err := m.validateOccursAt(formats); err != nil {
+		res = append(res, err)
+	}
+
+	if len(res) > 0 {
+		return errors.CompositeValidationError(res...)
+	}
+	return nil
+}
+
+func (m *AppError) validateCaption(formats strfmt.Registry) error {
+
+	if err := validate.Required("caption", "body", m.Caption); err != nil {
+		return err
+	}
+
+	return nil
+}
+
+func (m *AppError) validateOccursAt(formats strfmt.Registry) error {
+
+	if swag.IsZero(m.OccursAt) { // not required
+		return nil
+	}
+
+	if err := validate.FormatOf("occursAt", "body", "date-time", m.OccursAt.String(), formats); err != nil {
+		return err
+	}
+
+	return nil
+}
+
+// MarshalBinary interface implementation
+func (m *AppError) MarshalBinary() ([]byte, error) {
+	if m == nil {
+		return nil, nil
+	}
+	return swag.WriteJSON(m)
+}
+
+// UnmarshalBinary interface implementation
+func (m *AppError) UnmarshalBinary(b []byte) error {
+	var res AppError
+	if err := swag.ReadJSON(b, &res); err != nil {
+		return err
+	}
+	*m = res
+	return nil
+}
